--- a/Magic 8 Ball/Base.lproj/Main.storyboard
+++ b/Magic 8 Ball/Base.lproj/Main.storyboard
@@ -17,10 +17,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bwZ-26-PZ0">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bwZ-26-PZ0">
                                 <rect key="frame" x="168" y="648" width="82" height="49"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.58039215690000001" green="0.30196078430000001" blue="0.76470588240000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="49" id="JOW-VB-0lq"/>
+                                </constraints>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Button">
                                     <attributedString key="attributedTitle">
@@ -36,17 +38,30 @@
                                     <action selector="askButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qU4-ts-jzo"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="MagicBallText" translatesAutoresizingMaskIntoConstraints="NO" id="egH-sg-DqC">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MagicBallText" translatesAutoresizingMaskIntoConstraints="NO" id="egH-sg-DqC">
                                 <rect key="frame" x="-97" y="31" width="586" height="367"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="367" id="LCn-6B-dZD"/>
+                                    <constraint firstAttribute="width" constant="586" id="Mj0-hm-KO1"/>
+                                </constraints>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="StartPicture" translatesAutoresizingMaskIntoConstraints="NO" id="bVZ-EA-czH">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="StartPicture" translatesAutoresizingMaskIntoConstraints="NO" id="bVZ-EA-czH">
                                 <rect key="frame" x="20" y="340" width="353" height="250"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
+                        <constraints>
+                            <constraint firstItem="egH-sg-DqC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-28" id="1p3-6Z-2Vx"/>
+                            <constraint firstItem="bVZ-EA-czH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="1y1-mq-UpU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bwZ-26-PZ0" secondAttribute="bottom" constant="121" id="AgF-X8-wvT"/>
+                            <constraint firstItem="bVZ-EA-czH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="281" id="DPK-nF-zHO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bwZ-26-PZ0" secondAttribute="trailing" constant="143" id="LKB-ZL-LIK"/>
+                            <constraint firstItem="bwZ-26-PZ0" firstAttribute="top" secondItem="bVZ-EA-czH" secondAttribute="bottom" constant="58" id="XKD-GC-og7"/>
+                            <constraint firstItem="bwZ-26-PZ0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="168" id="nwm-gZ-Ko8"/>
+                            <constraint firstItem="egH-sg-DqC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rXC-gi-gw6"/>
+                            <constraint firstItem="egH-sg-DqC" firstAttribute="centerX" secondItem="bVZ-EA-czH" secondAttribute="centerX" id="tgr-cy-a0z"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="imageView" destination="bVZ-EA-czH" id="r4O-xG-Ebz"/>
