--- a/MagicBall/Base.lproj/Main.storyboard
+++ b/MagicBall/Base.lproj/Main.storyboard
@@ -12,13 +12,27 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Magic_8_Ball" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MagicBall" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MagicBallText" translatesAutoresizingMaskIntoConstraints="NO" id="egH-sg-DqC">
+                                <rect key="frame" x="-96.666666666666686" y="31" width="586.33333333333337" height="367"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="367" id="LCn-6B-dZD"/>
+                                    <constraint firstAttribute="width" constant="586" id="Mj0-hm-KO1"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="StartPicture" translatesAutoresizingMaskIntoConstraints="NO" id="bVZ-EA-czH">
+                                <rect key="frame" x="20" y="340" width="353" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="3np-p9-yPF"/>
+                                    <constraint firstAttribute="width" constant="403" id="XCv-mB-h8j"/>
+                                </constraints>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bwZ-26-PZ0">
-                                <rect key="frame" x="168" y="648" width="82" height="49"/>
+                                <rect key="frame" x="155" y="647" width="82" height="49"/>
                                 <color key="backgroundColor" red="0.58039215690000001" green="0.30196078430000001" blue="0.76470588240000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="49" id="JOW-VB-0lq"/>
@@ -38,27 +52,17 @@
                                     <action selector="askButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qU4-ts-jzo"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MagicBallText" translatesAutoresizingMaskIntoConstraints="NO" id="egH-sg-DqC">
-                                <rect key="frame" x="-97" y="31" width="586" height="367"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="367" id="LCn-6B-dZD"/>
-                                    <constraint firstAttribute="width" constant="586" id="Mj0-hm-KO1"/>
-                                </constraints>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="StartPicture" translatesAutoresizingMaskIntoConstraints="NO" id="bVZ-EA-czH">
-                                <rect key="frame" x="20" y="340" width="353" height="250"/>
-                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
                         <constraints>
                             <constraint firstItem="egH-sg-DqC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-28" id="1p3-6Z-2Vx"/>
                             <constraint firstItem="bVZ-EA-czH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="1y1-mq-UpU"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bwZ-26-PZ0" secondAttribute="bottom" constant="121" id="AgF-X8-wvT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bwZ-26-PZ0" secondAttribute="bottom" constant="122" id="AgF-X8-wvT"/>
                             <constraint firstItem="bVZ-EA-czH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="281" id="DPK-nF-zHO"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bwZ-26-PZ0" secondAttribute="trailing" constant="143" id="LKB-ZL-LIK"/>
-                            <constraint firstItem="bwZ-26-PZ0" firstAttribute="top" secondItem="bVZ-EA-czH" secondAttribute="bottom" constant="58" id="XKD-GC-og7"/>
-                            <constraint firstItem="bwZ-26-PZ0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="168" id="nwm-gZ-Ko8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bwZ-26-PZ0" secondAttribute="trailing" constant="156" id="LKB-ZL-LIK"/>
+                            <constraint firstItem="bwZ-26-PZ0" firstAttribute="top" secondItem="bVZ-EA-czH" secondAttribute="bottom" constant="57" id="XKD-GC-og7"/>
+                            <constraint firstItem="bwZ-26-PZ0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="155" id="nwm-gZ-Ko8"/>
                             <constraint firstItem="egH-sg-DqC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rXC-gi-gw6"/>
                             <constraint firstItem="egH-sg-DqC" firstAttribute="centerX" secondItem="bVZ-EA-czH" secondAttribute="centerX" id="tgr-cy-a0z"/>
                         </constraints>
